api-gw/nginx/cmbc/f5-manage06/3.2.11/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-3-2-11
  namespace: f5-manage06
  annotations:
    nginx.org/rewrites: "serviceName=user-svc rewrite=/;serviceName=order-svc rewrite=/transaction/"
spec:
  ingressClassName: nginx
  rules:
  - host: f5manage06.example.com
    http:
      paths:
      - path: /user/
        pathType: Prefix
        backend:
          service:
            name: user-svc
            port:
              number: 80
      - path: /order/
        pathType: Prefix
        backend:
          service:
            name: order-svc
            port:
              number: 80
